--- a/src/app/shared/prayer-request-modal/prayer-request-modal.component.scss
+++ b/src/app/shared/prayer-request-modal/prayer-request-modal.component.scss
@@ -1,20 +1,37 @@
-.full-width {
-    width: 100%;
+  .full-width {
+    width: 95%;
   }
-  
+
+  .dialog-content {
+    // margin: 0 auto;
+    // padding: 0;
+    overflow-x: hidden;
+  }
+
+  .dialog-content {
+      // margin: 0 auto;
+      // padding: 0;
+      overflow-x: hidden;
+  }
+
   .dialog-actions {
     display: flex;
     justify-content: center;
     gap: 16px;
     margin-top: 20px;
   }
-  
+
   .cancel-button {
     background-color: #ff4444; /* Rojo */
     color: white;
   }
-  
+
   .enviar-button {
-    background-color: #4caf50; /* Verde */
-    color: white;
+      background-color: #4caf50; /* Verde */
+      color: white;
+
+      &:disabled {
+        background-color: #ccc;
+        cursor: not-allowed;
+      }
   }
