--- a/src/styles.scss
+++ b/src/styles.scss
@@ -91,6 +91,10 @@ body {
 	background-color: #f8f6ed;
 }
 
+.headerTextColor {
+	color: rgb(80, 173, 17);
+}
+
 .headerText {
 	font-family: 'Montserrat' !important;
 	// font-family: Arial, Helvetica, sans-serif !important;
