--- a/src/app/layouts/home/home.component.scss
+++ b/src/app/layouts/home/home.component.scss
@@ -237,61 +237,6 @@ header {
 				}
 
 
-				// .header-container {
-				// 	position: relative;
-				// 	display: flex;
-				// 	justify-content: space-between;
-				// 	align-items: center;
-				// 	padding: 10px;
-				// 	background-color: #f8f8f8;
-				//   }
-				  
-				//   .menu-toggle {
-				// 	display: block; // Ocultar en desktop
-				// 	background: none;
-				// 	border: none;
-				// 	font-size: 24px;
-				// 	cursor: pointer;
-				//   }
-				  
-				//   .cellPhoneHeaderRightSide {
-				// 	display: block; // Ocultar por defecto en móviles
-				// 	position: fixed;
-				// 	top: 0;
-				// 	right: 0;
-				// 	width: 100%;
-				// 	height: 100vh;
-				// 	background-color: #fff;
-				// 	z-index: 1000;
-				// 	overflow-y: auto;
-				// 	transform: translateX(100%);
-				// 	transition: transform 0.3s ease-in-out;
-				  
-				// 	&.open {
-				// 	  transform: translateX(0); // Mostrar el menú
-				// 	}
-				  
-				// 	nav {
-				// 	  padding: 20px;
-				// 	  ul {
-				// 		list-style: none;
-				// 		padding: 0;
-				// 		margin: 0;
-				  
-				// 		li {
-				// 		  margin-bottom: 15px;
-				  
-				// 		  a {
-				// 			text-decoration: none;
-				// 			color: #333;
-				// 			font-size: 18px;
-				// 		  }
-				// 		}
-				// 	  }
-				// 	}
-				//   }
-				  
-
 
 				#cellPhoneHeaderRightSide {
 
@@ -322,26 +267,6 @@ header {
 					} //end cellPhoneHeaderMenuButton
 
 
-					#cellPhoneHeaderCloseButton {
-
-						color: rgb(118, 204, 61);
-						// background-color: white;
-						border: none;
-
-						// @media only screen and (max-width: 1046px) {
-						// 	margin-right: 25px;
-						// }
-
-						// @media only screen and (max-width: 415px) {
-						// 	margin-right: 10px;
-						// }
-
-						// @media only screen and (max-width: 377px) {
-						// 	margin-right: 0px;
-						// }
-						
-					} //end cellPhoneHeaderCloseButton
-
 					#cellPhoneDropDownMenu {
 
 						display: block; // Ocultar por defecto en móviles
@@ -360,24 +285,92 @@ header {
 							transform: translateX(0); // Mostrar el menú
 						}
 
-						nav {
-							padding: 20px;
-							ul {
-								list-style: none;
-								padding: 0;
-								margin: 0;
-							
-								li {
-									margin-bottom: 15px;
-							
-									a {
-										text-decoration: none;
-										color: #333;
-										font-size: 18px;
-									}
-								}
+
+						#cellPhoneHeaderCloseButton {
+
+							color: rgb(118, 204, 61);
+							// background-color: white;
+							border: none;
+	
+							@media only screen and (max-width: 1046px) {
+								margin-right: 25px;
 							}
-						  }
+	
+							@media only screen and (max-width: 415px) {
+								margin-right: 20px;
+							}
+	
+							@media only screen and (max-width: 377px) {
+								margin-right: 15px;
+							}
+							
+						} //end cellPhoneHeaderCloseButton
+
+						#menuCol {
+							// max-width: 400px;
+							margin: 0 auto;
+							text-align: left; /* Alineación a la izquierda */
+							padding-left: 25px;
+							padding-right: 20px;
+							// background-color: #f9f9f9; /* Fondo suave */
+							// border-radius: 8px;
+							// box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra elegante */
+
+							.title {
+								
+								@media only screen and (max-width: 1046px) {
+									font-size: 1.2rem;
+								}
+		
+								@media only screen and (max-width: 415px) {
+									font-size: 1.2rem;
+								}
+		
+								@media only screen and (max-width: 377px) {
+									font-size: 1.6rem;
+								}
+								font-weight: bold;
+								color: #333; /* Color del texto */
+								margin-bottom: 16px;
+							}
+							
+							.list {
+									list-style-type: none; /* Quitar el estilo predeterminado */
+									padding: 0;
+								
+									li {
+										height: 3rem;
+										margin: 0px 0;
+										// border: rgb(118, 204, 61);
+									
+										a {
+											text-decoration: none;
+											// color: #1976d2; /* Color de los enlaces */
+											
+											@media only screen and (max-width: 1046px) {
+												font-size: 0.95rem;
+											}
+					
+											@media only screen and (max-width: 415px) {
+												font-size: 0.95rem;
+											}
+					
+											@media only screen and (max-width: 377px) {
+												font-size: 1.05rem;
+											}
+											transition: color 0.3s;
+									
+											&:hover {
+											//   color: #0d47a1; /* Color al pasar el mouse */
+												color: rgb(62, 122, 22); /* Color al pasar el mouse */
+											}
+										}
+									}
+
+							} //end list
+
+						} //end menuCol
+						  
 
 					} //cellPhoneDropDownMenu
 
