--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -11,14 +11,67 @@
             </a>
         </li>
         <li id="headerSpace">&nbsp;</li>
-        <li><a href="#identity">QUIÉNES SOMOS</a></li>
+        <!-- <li><a href="#identity">QUIÉNES SOMOS</a></li> -->
         <li><a href="#speakers">EL EQUIPO</a></li>
-        <li><a href="#uneteMisiones">ÚNETE A LAS MISIONES</a></li>
+        <li><a href="#uneteMisiones">ÚNETE A LA MISIÓN 2025</a></li>
+        <li><a id="spainFlag"><img  class="countryFlag" src="../assets/img/spain-little.png"></a></li>
+        <li><a id="UKFlag"><img  class="countryFlag" src="../assets/img/unitedkingdom-little.png"></a></li>
+        <li><a id="germanyFlag"><img class="countryFlag" src="../assets/img/germany-little.png"></a></li>
         <!-- <li>
           <a href="#" (click)="openPrayerRequestModal($event)" data-target="modaloración">
               PETICIÓN DE ORACIÓN
           </a>
         </li> -->
+        <li id="normalScreenHeaderMenuButtonLi">
+          <button mat-button id="normalScreenHeaderMenuButton" class="headerBackgroundColor" (click)="toggleMenu()">
+              <mat-icon *ngIf="!isMenuOpen">menu</mat-icon>
+          </button>
+          <!-- Menú desplegable -->
+          <div id="cellPhoneDropDownMenu" class="headerBackgroundColor" [class.open]="isMenuOpen">
+              <!-- Contenido del menú -->
+              <button mat-button id="cellPhoneHeaderCloseButton" class="headerBackgroundColor" (click)="toggleMenu()">
+                  <mat-icon *ngIf="isMenuOpen">close</mat-icon>
+              </button>
+
+              <div id="menuCol" class="col">
+                <h2 class="title">Home</h2>
+                <hr>
+                <ul class="list">
+                  <!-- <li><a (click)="clickMenuAddress('uneteMisiones')">Únete a la misión 2025</a></li> -->
+                  <li>
+                      <a (click)="openContactUsModal($event)">
+                          Contacto
+                      </a>
+                  </li>
+                  <li>
+                      <a (click)="openPrayerRequestModal($event)">
+                          Petición de oración
+                      </a>
+                  </li>
+                  <li>
+                    <!-- <a>Idioma</a> -->
+                    <a class="submenu-toggle" (click)="toggleSubmenu($event)">Idioma<mat-icon id="expandMore">expand_more</mat-icon></a>
+                    <div class="submenu-list" *ngIf="isSubmenuOpen">
+                        <div>Español - ES</div>
+                        <div>English - EN</div>
+                        <div>Deutsch - DE</div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              
+          </div>
+          <!-- <mat-menu id="cellPhoneMenu" #menu="matMenu">
+              <button mat-menu-item><a class="headerText" href="#identity">QUIÉNES SOMOS</a></button>
+              <button mat-menu-item><a class="headerText" href="#speakers">EL EQUIPO</a></button>
+              <button mat-menu-item><a class="headerText" href="#uneteMisiones">ÚNETE A LAS MISIONES</a></button> -->
+              <!-- <button mat-menu-item>
+                  <a class="headerText" href="#" (click)="openPrayerRequestModal($event)" data-target="modaloración">
+                      PETICIÓN DE ORACIÓN
+                  </a>
+              </button> -->
+          <!-- </mat-menu> -->
+        </li>
     </ul>
   </header>
   
@@ -40,7 +93,6 @@
 
 
       <div id="cellPhoneHeaderRightSide" class="col">
-          <!-- <button mat-button [matMenuTriggerFor]="menu" id="cellPhoneHeaderMenuButton"><mat-icon>menu</mat-icon></button> -->
           <button mat-button id="cellPhoneHeaderMenuButton" class="headerBackgroundColor" (click)="toggleMenu()">
               <mat-icon *ngIf="!isMenuOpen">menu</mat-icon>
           </button>
@@ -51,7 +103,6 @@
                   <mat-icon *ngIf="isMenuOpen">close</mat-icon>
               </button>
               
-
               <div id="menuCol" class="col">
                 <h2 class="title">Home</h2>
                 <hr>
@@ -69,7 +120,15 @@
                           Petición de oración
                       </a>
                   </li>
-                  <li><a>Idioma</a></li>
+                  <li>
+                    <!-- <a>Idioma</a> -->
+                    <a class="submenu-toggle" (click)="toggleSubmenu($event)">Idioma<mat-icon id="expandMore">expand_more</mat-icon></a>
+                    <div class="submenu-list" *ngIf="isSubmenuOpen">
+                        <div>Español - ES</div>
+                        <div>English - EN</div>
+                        <div>Deutsch - DE</div>
+                    </div>
+                  </li>
                 </ul>
               </div>
               
