--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -13,64 +13,66 @@
         <li id="headerSpace">&nbsp;</li>
         <!-- <li><a href="#identity">QUIÉNES SOMOS</a></li> -->
         <li><a href="#speakers">EL EQUIPO</a></li>
+        <li><a href="#currentYearTour">TOUR MISIONERO 2025</a></li>
         <li><a href="#uneteMisiones">ÚNETE A LA MISIÓN 2025</a></li>
-        <li><a id="spainFlag"><img  class="countryFlag" src="../assets/img/spain-little.png"></a></li>
-        <li><a id="UKFlag"><img  class="countryFlag" src="../assets/img/unitedkingdom-little.png"></a></li>
-        <li><a id="germanyFlag"><img class="countryFlag" src="../assets/img/germany-little.png"></a></li>
+        <!-- <li id="headerSpace2">&nbsp;</li> -->
+        <li *ngIf="spainSelected"><a id="spainFlag" class="flag" (click)="toggleLanguage('en')"><img  class="countryFlag" src="../assets/img/spain-little.png">&nbsp;ESPAÑOL</a></li>
+        <li *ngIf="ukSelected"><a id="UKFlag" class="flag" (click)="toggleLanguage('es')"><img  class="countryFlag" src="../assets/img/unitedkingdom-little.png">&nbsp;ENGLISH</a></li>
+        <!-- <li *ngIf="germanySelected"><a id="germanyFlag" class="flag" (click)="toggleLanguage('de')"><img class="countryFlag" src="../assets/img/germany-little.png">&nbsp;DEUTSCH</a></li> -->
         <!-- <li>
           <a href="#" (click)="openPrayerRequestModal($event)" data-target="modaloración">
               PETICIÓN DE ORACIÓN
           </a>
         </li> -->
         <li id="normalScreenHeaderMenuButtonLi">
-          <button mat-button id="normalScreenHeaderMenuButton" class="headerBackgroundColor" (click)="toggleMenu()">
-              <mat-icon *ngIf="!isMenuOpen">menu</mat-icon>
-          </button>
-          <!-- Menú desplegable -->
-          <div id="cellPhoneDropDownMenu" class="headerBackgroundColor" [class.open]="isMenuOpen">
-              <!-- Contenido del menú -->
-              <button mat-button id="cellPhoneHeaderCloseButton" class="headerBackgroundColor" (click)="toggleMenu()">
-                  <mat-icon *ngIf="isMenuOpen">close</mat-icon>
-              </button>
+            <button mat-button id="normalScreenHeaderMenuButton" class="headerBackgroundColor" (click)="toggleMenu()">
+                <mat-icon *ngIf="!isMenuOpen">menu</mat-icon>
+            </button>
+            <!-- Menú desplegable -->
+            <div id="normalScreenDropDownMenu" class="headerBackgroundColor" [class.open]="isMenuOpen">
+                <!-- Contenido del menú -->
+                <button mat-button id="normalScreenHeaderCloseButton" class="headerBackgroundColor" (click)="toggleMenu()">
+                    <mat-icon *ngIf="isMenuOpen">close</mat-icon>
+                </button>
 
-              <div id="menuCol" class="col">
-                <h2 class="title">Home</h2>
-                <hr>
-                <ul class="list">
-                  <!-- <li><a (click)="clickMenuAddress('uneteMisiones')">Únete a la misión 2025</a></li> -->
-                  <li>
-                      <a (click)="openContactUsModal($event)">
-                          Contacto
-                      </a>
-                  </li>
-                  <li>
-                      <a (click)="openPrayerRequestModal($event)">
-                          Petición de oración
-                      </a>
-                  </li>
-                  <li>
-                    <!-- <a>Idioma</a> -->
-                    <a class="submenu-toggle" (click)="toggleSubmenu($event)">Idioma<mat-icon id="expandMore">expand_more</mat-icon></a>
-                    <div class="submenu-list" *ngIf="isSubmenuOpen">
-                        <div>Español - ES</div>
-                        <div>English - EN</div>
-                        <div>Deutsch - DE</div>
+                <div id="menuCol" class="col">
+                  <h2 class="title">Home</h2>
+                  <hr>
+                  <!-- <div class="list"> -->
+                    <!-- <li><a (click)="clickMenuAddress('uneteMisiones')">Únete a la misión 2025</a></li> -->
+                    <div>
+                        <a (click)="openContactUsModal($event)">
+                            Contacto
+                        </a>
                     </div>
-                  </li>
-                </ul>
-              </div>
-              
-          </div>
-          <!-- <mat-menu id="cellPhoneMenu" #menu="matMenu">
-              <button mat-menu-item><a class="headerText" href="#identity">QUIÉNES SOMOS</a></button>
-              <button mat-menu-item><a class="headerText" href="#speakers">EL EQUIPO</a></button>
-              <button mat-menu-item><a class="headerText" href="#uneteMisiones">ÚNETE A LAS MISIONES</a></button> -->
-              <!-- <button mat-menu-item>
-                  <a class="headerText" href="#" (click)="openPrayerRequestModal($event)" data-target="modaloración">
-                      PETICIÓN DE ORACIÓN
-                  </a>
-              </button> -->
-          <!-- </mat-menu> -->
+                    <div>
+                        <a (click)="openPrayerRequestModal($event)">
+                            Petición de oración
+                        </a>
+                    </div>
+                    <div>
+                      <!-- <a>Idioma</a> -->
+                      <a class="submenu-toggle" (click)="toggleSubmenu($event)">Idioma<mat-icon id="expandMore">expand_more</mat-icon></a>
+                      <div class="submenu-list" *ngIf="isSubmenuOpen">
+                          <div>Español - ES</div>
+                          <div>English - EN</div>
+                          <div>Deutsch - DE</div>
+                      </div>
+                    </div>
+                  <!-- </div> -->
+                </div>
+                
+            </div>
+            <!-- <mat-menu id="cellPhoneMenu" #menu="matMenu">
+                <button mat-menu-item><a class="headerText" href="#identity">QUIÉNES SOMOS</a></button>
+                <button mat-menu-item><a class="headerText" href="#speakers">EL EQUIPO</a></button>
+                <button mat-menu-item><a class="headerText" href="#uneteMisiones">ÚNETE A LAS MISIONES</a></button> -->
+                <!-- <button mat-menu-item>
+                    <a class="headerText" href="#" (click)="openPrayerRequestModal($event)" data-target="modaloración">
+                        PETICIÓN DE ORACIÓN
+                    </a>
+                </button> -->
+            <!-- </mat-menu> -->
         </li>
     </ul>
   </header>
