--- a/src/app/layouts/home/home.component.scss
+++ b/src/app/layouts/home/home.component.scss
@@ -76,266 +76,15 @@ header {
 			transition: all 300ms;
 			max-height: 80px;
 			// white-space: nowrap;     
-			word-break: break-word; /* Divide palabras largas si es necesario */
+			word-break: normal; /* Divide palabras largas si es necesario */
 			line-height: 1.2; /* Reducir el interlineado */
+			cursor: pointer;
 		}
 
 
 		header a:hover, .actived{
 			transform: scale(1.25,1.25);
 		}
-
-
-		#spainFlag {
-			padding-left: 30px;
-			margin-right: 0;
-			padding-left: 6px;
-			padding-right: 6px;
-		}
-
-		#UKFlag {
-			margin-left: 0;
-			margin-right: 0;
-			padding-left: 6px;
-			padding-right: 6px;
-		}
-
-		#germanyFlag {
-			margin-left: 0;
-			margin-right: 0;
-			padding-left: 6px;
-			padding-right: 6px;
-		}
-
-		.countryFlag {
-			height: 25px;
-			width: 35px;
-		}
-
-		#normalScreenHeaderMenuButtonLi {
-			width: 3%;
-			max-width: 3%;
-			text-align: right;
-			align-items: center; /* Centra los elementos en el eje vertical */
-			margin: 0 auto;
-			height: 100%; /* Asegura que los li ocupen toda la altura de la cabecera */
-
-
-			#normalScreenHeaderMenuButton {
-
-				color: rgb(118, 204, 61);
-				// background-color: #f8f6ed;
-				border: none;
-
-				@media only screen and (max-width: 1046px) {
-					margin-right: 25px;
-				}
-
-				@media only screen and (max-width: 415px) {
-					margin-right: 10px;
-				}
-
-				@media only screen and (max-width: 377px) {
-					margin-right: 0px;
-				}
-				
-			} //end cellPhoneHeaderMenuButton
-
-
-			#cellPhoneDropDownMenu {
-
-				display: block; // Ocultar por defecto en móviles
-				position: fixed;
-				top: 0;
-				right: 0;
-				width: 80%;
-				height: 100vh;
-				// background-color: #fff;
-				z-index: 1000;
-				overflow-y: auto;
-				transform: translateX(100%);
-				transition: transform 0.3s ease-in-out;
-
-				&.open {
-					transform: translateX(0); // Mostrar el menú
-				}
-
-
-				#cellPhoneHeaderCloseButton {
-
-					color: rgb(118, 204, 61);
-					// background-color: white;
-					border: none;
-
-					@media only screen and (max-width: 1046px) {
-						margin-right: 25px;
-					}
-
-					@media only screen and (max-width: 415px) {
-						margin-right: 20px;
-					}
-
-					@media only screen and (max-width: 377px) {
-						margin-right: 15px;
-					}
-					
-				} //end cellPhoneHeaderCloseButton
-
-				#menuCol {
-					// max-width: 400px;
-					margin: 0 auto;
-					text-align: left; /* Alineación a la izquierda */
-					padding-left: 25px;
-					padding-right: 20px;
-					// background-color: #f9f9f9; /* Fondo suave */
-					// border-radius: 8px;
-					// box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra elegante */
-
-					.title {
-						
-						@media only screen and (max-width: 1046px) {
-							font-size: 1.2rem;
-						}
-
-						@media only screen and (max-width: 415px) {
-							font-size: 1.2rem;
-						}
-
-						@media only screen and (max-width: 377px) {
-							font-size: 1.6rem;
-						}
-						font-weight: bold;
-						color: #333; /* Color del texto */
-						margin-bottom: 16px;
-					}
-					
-					.list {
-							list-style-type: none; /* Quitar el estilo predeterminado */
-							padding: 0;
-						
-							li {
-								height: 3rem;
-								margin: 0px 0;
-								// border: rgb(118, 204, 61);
-							
-								a {
-									text-decoration: none;
-									// color: #1976d2; /* Color de los enlaces */
-									
-									@media only screen and (max-width: 1046px) {
-										font-size: 0.95rem;
-									}
-			
-									@media only screen and (max-width: 415px) {
-										font-size: 0.95rem;
-									}
-			
-									@media only screen and (max-width: 377px) {
-										font-size: 1.05rem;
-									}
-									transition: color 0.3s;
-							
-									&:hover {
-									//   color: #0d47a1; /* Color al pasar el mouse */
-										color: rgb(62, 122, 22); /* Color al pasar el mouse */
-									}
-
-									#expandMore {
-										// margin-top:14px;
-										// top:4;
-										position: relative; /* Asegúrate de establecer una posición relativa al padre */
-										  top: 5px; /* Baja el icono 5px */
-									}
-
-								} //end a
-
-
-								.submenu-list {
-									height: 100%;
-									// top:0;
-									margin: 0 auto;
-									position: relative;
-									top: -25px;
-									
-									// list-style-type: none;
-									// padding: 0;
-									// margin: 0px 0 0;
-									// background-color: #f9f9f9;
-									// border: 1px solid #ddd;
-									// border-radius: 4px;
-									// box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-
-									div {
-
-										height: 2.5rem;
-										padding-left: 20px;
-										text-decoration: none;
-										// color: #1976d2; /* Color de los enlaces */
-										
-										@media only screen and (max-width: 1046px) {
-											font-size: 0.95rem;
-										}
-				
-										@media only screen and (max-width: 415px) {
-											font-size: 0.95rem;
-										}
-				
-										@media only screen and (max-width: 377px) {
-											font-size: 1.05rem;
-										}
-										transition: color 0.3s;
-								
-										&:hover {
-										//   color: #0d47a1; /* Color al pasar el mouse */
-											color: rgb(62, 122, 22); /* Color al pasar el mouse */
-										}
-
-										// a {
-										// 	display: block;
-										// 	height: 2rem;
-										// 	padding: 8px 16px;
-										// 	font-size: 1rem;
-										// 	color: #555;
-										
-										// 	&:hover {
-										// 		background-color: #f0f0f0;
-											//   color: #1976d2;
-											// }
-										// }
-
-									}
-
-								} //end submenu-list
-
-
-								// .submenu-toggle {
-								// 	// cursor: pointer;
-								// 	margin: 0 auto;
-								// 	padding: 0;
-
-								// 	#expandMore {
-								// 		// margin-top:14px;
-								// 		// top:4;
-								// 		position: relative; /* Asegúrate de establecer una posición relativa al padre */
-								  // 		top: 5px; /* Baja el icono 5px */
-								// 	}
-
-								// } ///end submenu-toggle 
-								
-
-							} //end li
-
-					} //end list
-
-					
-
-				} //end menuCol
-				  
-
-			} //cellPhoneDropDownMenu
-
-		}
-
 
 
 		#headerIconText {
@@ -364,15 +113,250 @@ header {
 					word-wrap: break-word; /* Asegura que el texto respete el ancho */
 				}
 
-			}
+			} //end normalScreenHeaderLogo
 
-		}
+		} //end headerIconText
 
 
 		#headerSpace {
 			min-width: 12%;
 			// height: 70px;
 		}
+
+		#headerSpace2 {
+			min-width: 5%;
+			// height: 70px;
+		}
+
+		.flag {
+			margin-left: 0px;
+			margin-right: 0;
+			padding-left: 40px;
+			padding-right: 26px;
+			&:hover {
+				transform: inherit !important;
+				color: #a7563e; 
+			}
+		}
+
+		// #spainFlag {
+		// }
+
+		// #UKFlag {
+		// }
+
+		// #germanyFlag {
+		// }
+
+		.countryFlag {
+			height: 18px;
+			width: 25px;
+		}
+
+		#normalScreenHeaderMenuButtonLi {
+			width: 5%;
+			max-width: 5%;
+			text-align: right;
+			align-items: center; /* Centra los elementos en el eje vertical */
+			margin: 0 auto;
+			height: 100%; /* Asegura que los li ocupen toda la altura de la cabecera */
+
+
+			#normalScreenHeaderMenuButton {
+
+				color: rgb(118, 204, 61);
+				// background-color: #f8f6ed;
+				border: none;
+
+				@media only screen and (min-width: 1047px) {
+					margin-right: 25px;
+				}
+
+				@media only screen and (min-width: 1047px) {
+					// margin-right: 10px;
+				}
+
+				@media only screen and (min-width: 1047px) {
+					// margin-right: 0px;
+				}
+
+				
+			} //end cellPhoneHeaderMenuButton
+
+
+			#normalScreenDropDownMenu {
+
+				display: block; // Ocultar por defecto en móviles
+				position: fixed;
+				top: 0;
+				right: 0;
+				width: 80%;
+				height: 100vh;
+				// background-color: #fff;
+				z-index: 1000;
+				overflow-y: auto;
+				transform: translateX(100%);
+				transition: transform 0.3s ease-in-out;
+
+				&.open {
+					transform: translateX(0); // Mostrar el menú
+				}
+
+
+				#normalScreenHeaderCloseButton {
+
+					color: rgb(118, 204, 61);
+					// background-color: white;
+					border: none;
+
+					@media only screen and (min-width: 1047px) {
+						margin-top: 20px;
+						margin-right: 25px;
+					}
+
+					@media only screen and (min-width: 1047px) {
+						// margin-right: 20px;
+					}
+
+					@media only screen and (min-width: 1047px) {
+						// margin-right: 15px;
+					}
+					
+				} //end cellPhoneHeaderCloseButton
+
+				#menuCol {
+					// max-width: 400px;
+					margin: 0 auto;
+					text-align: left; /* Alineación a la izquierda */
+					padding-left: 40px;
+					padding-right: 20px;
+					// background-color: #f9f9f9; /* Fondo suave */
+					// border-radius: 8px;
+					// box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra elegante */
+					
+
+					.title {
+						
+						@media only screen and (min-width: 1047px) {
+							font-size: 1.2rem;
+						}
+
+						@media only screen and (min-width: 1047px) {
+							// font-size: 1.2rem;
+						}
+
+						@media only screen and (min-width: 1047px) {
+							// font-size: 1.6rem;
+						}
+						font-weight: bold;
+						color: #333; /* Color del texto */
+						margin-bottom: 16px;
+					}
+					
+					// .list {
+							// list-style-type: none; /* Quitar el estilo predeterminado */
+							// padding: 0;
+						
+					div {
+						height: 3rem;
+						margin: 0px 0;
+						// border: rgb(118, 204, 61);
+					
+						a {
+							text-decoration: none;
+							padding: 0;
+							// color: #1976d2; /* Color de los enlaces */
+							
+							@media only screen and (min-width: 1047px) {
+								font-size: 0.95rem;
+							}
+	
+							@media only screen and (min-width: 1047px) {
+								// font-size: 0.95rem;
+							}
+	
+							@media only screen and (min-width: 1047px) {
+								// font-size: 1.05rem;
+							}
+							transition: color 0.3s;
+					
+							&:hover {
+							//   color: #0d47a1; /* Color al pasar el mouse */
+								color: rgb(62, 122, 22); /* Color al pasar el mouse */
+								transform: inherit;
+							}
+
+							// a:hover, .actived{
+							// 	transform: initial;
+							// }
+					
+
+							#expandMore {
+								// margin-top:14px;
+								// top:4;
+								// position: relative; /* Asegúrate de establecer una posición relativa al padre */
+								// top: 0px; /* Baja el icono 5px */
+							}
+
+						} //end a
+
+
+						.submenu-list {
+							height: 100%;
+							// top:0;
+							margin: 0 auto;
+							position: relative;
+							top: 14px;
+							
+							// list-style-type: none;
+							// padding: 0;
+							// margin: 0px 0 0;
+							// background-color: #f9f9f9;
+							// border: 1px solid #ddd;
+							// border-radius: 4px;
+							// box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+							div {
+
+								height: 2.5rem;
+								padding-left: 28px;
+								text-decoration: none;
+								// color: #1976d2; /* Color de los enlaces */
+								
+								@media only screen and (min-width: 1047px) {
+									font-size: 0.95rem;
+								}
+		
+								@media only screen and (min-width: 1047px) {
+									// font-size: 0.95rem;
+								}
+		
+								@media only screen and (min-width: 1047px) {
+									// font-size: 1.05rem;
+								}
+								transition: color 0.3s;
+						
+								&:hover {
+								//   color: #0d47a1; /* Color al pasar el mouse */
+									color: rgb(62, 122, 22); /* Color al pasar el mouse */
+								}
+
+							} //end div
+
+						} //end submenu-list
+
+
+					} //end div
+
+
+				} //end menuCol
+				  
+
+			} //end cellPhoneDropDownMenu
+
+		} //end normalScreenHeaderMenuButtonLi
+
+
 
 
 		//=========== NORMAL SCREEN FOOTER ===========//
@@ -485,7 +469,7 @@ header {
 						word-wrap: break-word; /* Asegura que el texto respete el ancho */
 					}
 
-				}
+				} //end cellPhoneHeaderLeftSide
 
 
 
@@ -558,14 +542,10 @@ header {
 						} //end cellPhoneHeaderCloseButton
 
 						#menuCol {
-							// max-width: 400px;
 							margin: 0 auto;
 							text-align: left; /* Alineación a la izquierda */
 							padding-left: 25px;
 							padding-right: 20px;
-							// background-color: #f9f9f9; /* Fondo suave */
-							// border-radius: 8px;
-							// box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra elegante */
 
 							.title {
 								
@@ -578,11 +558,15 @@ header {
 								}
 		
 								@media only screen and (max-width: 377px) {
-									font-size: 1.6rem;
+									font-size: 1.2rem;
 								}
 								font-weight: bold;
 								color: #333; /* Color del texto */
 								margin-bottom: 16px;
+							}
+
+							hr {
+								margin: 0px 0px 5px 0px;
 							}
 							
 							.list {
@@ -590,7 +574,7 @@ header {
 									padding: 0;
 								
 									li {
-										height: 3rem;
+										height: 2.5rem;
 										margin: 0px 0;
 										// border: rgb(118, 204, 61);
 									
@@ -620,7 +604,7 @@ header {
 												// margin-top:14px;
 												// top:4;
 												position: relative; /* Asegúrate de establecer una posición relativa al padre */
-  												top: 5px; /* Baja el icono 5px */
+  												top: 7px; /* Baja el icono 5px */
 											}
 
 										} //end a
@@ -631,19 +615,12 @@ header {
 											// top:0;
 											margin: 0 auto;
 											position: relative;
-											top: -25px;
+											top: -30px;
 											
-											// list-style-type: none;
-											// padding: 0;
-											// margin: 0px 0 0;
-											// background-color: #f9f9f9;
-											// border: 1px solid #ddd;
-											// border-radius: 4px;
-											// box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
 											div {
 
-												height: 2.5rem;
+												height: 2.3rem;
 												padding-left: 20px;
 												text-decoration: none;
 												// color: #1976d2; /* Color de los enlaces */
@@ -666,38 +643,11 @@ header {
 													color: rgb(62, 122, 22); /* Color al pasar el mouse */
 												}
 
-												// a {
-												// 	display: block;
-												// 	height: 2rem;
-												// 	padding: 8px 16px;
-												// 	font-size: 1rem;
-												// 	color: #555;
-												
-												// 	&:hover {
-												// 		background-color: #f0f0f0;
-													//   color: #1976d2;
-													// }
-												// }
 
-											}
+											} //end div
 
 										} //end submenu-list
 
-
-										// .submenu-toggle {
-										// 	// cursor: pointer;
-										// 	margin: 0 auto;
-										// 	padding: 0;
-
-										// 	#expandMore {
-										// 		// margin-top:14px;
-										// 		// top:4;
-										// 		position: relative; /* Asegúrate de establecer una posición relativa al padre */
-  										// 		top: 5px; /* Baja el icono 5px */
-										// 	}
-
-										// } ///end submenu-toggle 
-										
 
 									} //end li
 
